# Proxima

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  metric.rs  vector.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs  nsw.rs
playground/viz/: Cargo.toml
playground/viz/src/: main.rs
