[package]
name = "proxima-index"
description = "ANN indexes for the Proxima vector database: exact brute-force kNN oracle and the NSW/HNSW graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
proxima-core = { path = "../core" }
